# flame

./: README.md  csd.conf  do_cmake.sh
cmake/modules/: ImportDPDK.cmake  ImportSPDK.cmake
proto/: libflame.proto
scripts/: kill_all.sh  mysql.sh  start_all.sh
src/: CMakeLists.txt  README.md
src/chunkstore/nvmestore/: chunkblobmap.cc  chunkblobmap.h  nvmechunk.cc  nvmeconf.cc  nvmestore.cc  nvmestore.h
src/cml/: flame.cc  spdk_rpc.cc
src/csd/: config_csd.h  csd.cc
src/gtest/: CMakeLists.txt
src/gtest/libflame/: CMakeLists.txt  CxxTestDefs.h  gtest_libflame.cc  gtest_libflame.h
src/include/: buffer.h  cmd.h  csdc.h  libflame.h  libflame_api.h  meta.h
src/libflame/: CMakeLists.txt  libflame.cc  libflame_api.cc  log_libflame.h
src/libflame/libchunk/: chunk_cmd_service.cc  chunk_cmd_service.h  libchunk.cc  libchunk.h  msg_handle.cc  msg_handle.h
src/memzone/: rdma_mz.cc  rdma_mz.h
src/memzone/rdma/: BuddyAllocator.cc  BuddyAllocator.h  RdmaMem.cc  RdmaMem.h
src/metastore/: metastore.h
src/mgr/: mgr_server.cc  mgr_server.h
src/mgr/chkm/: chk_mgmt.cc
src/mgr/csdm/: csd_mgmt.cc
src/mgr/volm/: vol_mgmt.cc  vol_mgmt.h
src/msg/: Connection.h  MsgManager.cc  MsgWorker.cc  Session.cc  Session.h  msg_context.cc  msg_core.h  msg_data.h  msg_types.h
src/msg/event/: EventPoller.cc
src/msg/internal/: msg_buffer_list.h  msg_config.cc  msg_config.h
src/msg/rdma/: Infiniband.cc  Infiniband.h  RdmaConnection.cc  RdmaConnection.h  RdmaPrepConn.cc  RdmaStack.cc  RdmaStack.h
src/msg/socket/: TcpConnection.cc
src/proto/: Makefile
src/service/: Makefile  flame_service.cc  libflame_client.cc  libflame_client.h  libflame_service.cc  libflame_service.h
src/tests/: CMakeLists.txt
src/tests/chunkstore/: CMakeLists.txt  chunkstore_test.cc
src/tests/libchunk/: CMakeLists.txt  client_test.cc  flame_mgr.cfg  server_test.cc
src/tests/libflame/: CMakeLists.txt  client_test.c  flame_client.cfg  gateway_client_test.c  gateway_client_test.cc
src/tests/memzone/: allocator_test.cc  flame_mgr.cfg
src/tests/msg/: CMakeLists.txt  buddy_allocator_ut.cc
src/tests/msg/rdma_conn_v2/: CMakeLists.txt  flame_client.cfg  flame_mgr.cfg  msger.cc  msger.h  msger_write.cc  msger_write.h  rdma_client.cc  rdma_mgr.cc  rdma_write_c.cc  rdma_write_s.cc
src/tests/nvmf/: CMakeLists.txt  internal_nvmf.conf  nvmf.conf  nvmf_tgt.c
src/util/: ip_op.cc  ip_op.h
